--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+/* div {
+  border: 1px solid brown;
+} */
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -8,20 +11,149 @@
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
-
+.padding-bottom_20px  {
+  padding-bottom: 20px;
+}
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  min-width: 1500px;
+  padding-left: 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
   /* выше установили ограничения для секции */
 }
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+.logo {
+position: absolute;
+top: 30px;
+width: 183px;
+z-index: 1;
+}
+.header__logo_img {
+  top: 30px;
+  height: 32px;;
+}
+.header__title {
+  padding: 0;
+  width: 730px;
+line-height: 96px;
+font-size: 102px;
+font-weight: bold;
+}
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 1;
+}
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
 }
 
+.header__main-illustration {
+position: absolute;
+bottom: 0;
+right: 0;
+}
+.header__image {
+  width: 765px;
+height: 608px;
+}
+.header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0;
+  height: 568px;
+  width: 568px;
+  background-color: #2f80ed;
+  z-index: -1;
+}
+
+.description {
+  /* padding-left: 64px; */
+margin: 100px auto;
+
+}
+.description__two_columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+}
+.description__two_columns_brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+.description__two_columns_main-text {
+  width: 80%;
+  min-width: 784px;
+}
+.description__two_columns_paragrath {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.two-columns__span-accent {
+  font-weight: bold;
+}
+.two_columns_paragrath_between {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.digits {
+}
+.digits__section-title {
+  margin: auto;
+  margin-bottom: 20px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  position: relative;
+  text-align: center;
+}
+.digits__section-subtitle {
+  margin: auto;
+  margin-bottom: 60px;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  position: relative;
+  text-align: center;
+}
+.digits__table {
+  display: flex;
+justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 1100px;
+}
+.digits__table_cell {
+  width: 250px;
+  margin-bottom: 60px;
+}
+.digits__table_heading {
+  bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.digits__table_text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
