--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,3 @@
-/* div {
-  border: 1px solid brown;
-} */
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -11,59 +8,61 @@
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
-.padding-bottom_20px  {
-  padding-bottom: 20px;
-}
+
 .header {
+  background-color: #f2f2f2;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  min-width: 1500px;
-  padding-left: 64px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: relative;
-  /* выше установили ограничения для секции */
 }
 .logo {
-position: absolute;
-top: 30px;
 width: 183px;
-z-index: 1;
+z-index: 2;
 }
-.header__logo_img {
+.logo__place_header {
+  position: absolute;
   top: 30px;
-  height: 32px;;
+  left: 64px;
+  height: 32px;
 }
 .header__title {
-  padding: 0;
+  margin: 0;
+  position: relative;
+  left: 64px;
   width: 730px;
-line-height: 96px;
-font-size: 102px;
-font-weight: bold;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
 }
 .header__subtitle {
+  margin: 0;
   position: absolute;
   bottom: 30px;
+  left: 64px;
   width: 388px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  z-index: 1;
+  z-index: 2;
 }
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  z-index: 2;
 }
 
 .header__main-illustration {
 position: absolute;
 bottom: 0;
 right: 0;
+z-index: 1;
 }
 .header__image {
-  width: 765px;
+width: 765px;
 height: 608px;
 }
 .header__square-pic {
@@ -73,91 +72,229 @@ height: 608px;
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  z-index: -1;
+  z-index: 0;
 }
 
 .description {
-  /* padding-left: 64px; */
 margin: 100px auto;
-
 }
-.description__two_columns {
+.two_columns {
   display: flex;
   justify-content: space-between;
   width: 80%;
   margin: auto;
 }
-.description__two_columns_brief {
+.two_columns_brief {
+  margin: 0;
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
 }
-.description__two_columns_main-text {
+.two_columns_main-text {
   width: 80%;
   min-width: 784px;
 }
-.description__two_columns_paragrath {
+.two_columns_paragrath {
+  margin: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+}
+.two_columns_paragrath:nth-last-child(n+2) {
+  margin-bottom: 30px;
 }
 .two-columns__span-accent {
   font-weight: bold;
 }
-.two_columns_paragrath_between {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-.digits {
-}
-.digits__section-title {
-  margin: auto;
-  margin-bottom: 20px;
+
+/* универсальные классы для заголовков блоков digits и kaufman*/
+.section-title {
+  margin: 0 auto;
+  padding-bottom: 20px;
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  position: relative;
   text-align: center;
 }
-.digits__section-subtitle {
-  margin: auto;
-  margin-bottom: 60px;
+.section-subtitle {
+  margin: 0 auto;
   width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  position: relative;
   text-align: center;
 }
-.digits__table {
+/* универсальные классы для таблиц digits, kaufman */
+.table {
   display: flex;
-justify-content: space-between;
+  justify-content: space-between;
   flex-wrap: wrap;
   margin: 0 auto;
   width: 1100px;
 }
-.digits__table_cell {
+/* класс ячейки таблицы */
+.table_cell {
   width: 250px;
+  margin-top: 60px;
+}
+.table_cell_interval
+{
   margin-bottom: 60px;
 }
-.digits__table_heading {
-  bottom: 20px;
+/* класс заголовка ячейки */
+.table_heading {
+  margin: 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
 }
-.digits__table_text {
+/* класс текста ячейки */
+.table_text {
+  margin: 0;
+  margin-top: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.feynman {
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-top: 100px;
+  min-height: 790px;
+  background-image: url('../images/feynman.png');
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
+}
+
+.feynman__title {
+  margin: 0 auto 70px;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  margin: 0 auto;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.feynman__link {
+  text-decoration: none;
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.kaufman {
+  padding: 90px 0 90px;
+  background-color: black;
+  background-image: url('../images/kaufman-triangle.svg');
+  background-position: top right -210px;
+  background-repeat: no-repeat;
+  background-size: 877px 877px;
+  overflow: hidden;
+}
+
+/* вместо классов с модификатором theme_dsrk изменила цвет шрифта на белый таким образом: */
+.kaufman .table_cell {
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
+}
+.kaufman .section-title {
+  color: white;
+}
+.kaufman .section-subtitle {
+  color: white;
+}
+.kaufman .table_heading {
+  color: white;
+}
+.kaufman .table_text {
+  color: white;
+}
+
+.footer {
+  margin: auto;
+  min-height: 350px;
+  padding: 60px 0 40px;
+  background-color: black;
+  box-sizing: border-box;
+}
+
+/* таблица подвала (главная) */
+.footer__columns {
+  margin: auto;
+  height: 250px;
+  display: flex;
+  position: relative;
+  width: 90%;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+/* дополнительный класс для логотипа в футере,
+используется вместе с универсальным классом logo  */
+.logo__place_footer {
+  height: 35px;
+}
+
+.footer__author {
+  margin: 0;
+  padding: 18px 0;
+  color: white;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  margin: 0;
+  margin-bottom: 20px;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  margin-bottom: 16px;
+}
+
+.footer__column-link {
+  margin: 0;
+  display: block;
+  flex-direction: column;
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
