--- a/styles/style.css
+++ b/styles/style.css
@@ -21,11 +21,11 @@
 }
 
 .logo {
-width: 183px;
-z-index: 2;
+  width: 183px;
+  z-index: 2;
 }
 
-.logo__place_header {
+.logo_place-header {
   position: absolute;
   top: 30px;
   left: 64px;
@@ -33,10 +33,9 @@ z-index: 2;
 }
 
 .header__title {
-  margin: 0;
+  margin: 0 0 0 64px;
   position: relative;
-  left: 64px;
-  width: 730px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
@@ -47,7 +46,7 @@ z-index: 2;
   position: absolute;
   bottom: 30px;
   left: 64px;
-  width: 388px;
+  max-width: 388px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -57,19 +56,16 @@ z-index: 2;
 .header__link {
   text-decoration: none;
   color: #2f80ed;
-  z-index: 2;
+  z-index: 1;
 }
 
 .header__main-illustration {
-position: absolute;
-bottom: 0;
-right: 0;
-z-index: 1;
-}
-
-.header__image {
-width: 765px;
-height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
 }
 
 .header__square-pic {
@@ -79,42 +75,41 @@ height: 608px;
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  z-index: 0;
 }
 
 .description {
-margin: 100px auto;
+  margin: 100px auto;
 }
 
-.two_columns {
+.two-columns {
   display: flex;
   justify-content: space-between;
   width: 80%;
   margin: auto;
 }
 
-.two_columns_brief {
+.two-columns_brief {
   margin: 0;
-  width: 175px;
+  max-width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
 }
 
-.two_columns_main-text {
+.two-columns_main-text {
   width: 80%;
   min-width: 784px;
 }
 
-.two_columns_paragrath {
+.two-columns_paragraph {
   margin: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
 
-.two_columns_paragrath:nth-last-child(n+2) {
+.two-columns_paragrath:nth-last-child(n+2) {
   margin-bottom: 30px;
 }
 
@@ -123,6 +118,7 @@ margin: 100px auto;
 }
 
 /* универсальные классы для заголовков блоков digits и kaufman*/
+
 .section-title {
   margin: 0 auto;
   padding-bottom: 20px;
@@ -142,7 +138,12 @@ margin: 100px auto;
   text-align: center;
 }
 
+.digits {
+  margin-bottom: 100px;
+}
+
 /* универсальные классы для таблиц digits, kaufman */
+
 .table {
   display: flex;
   justify-content: space-between;
@@ -152,18 +153,15 @@ margin: 100px auto;
 }
 
 /* класс ячейки таблицы */
-.table_cell {
+
+.table__cell {
   width: 250px;
   margin-top: 60px;
 }
 
-.table_cell_interval
-{
-  margin-bottom: 60px;
-}
-
 /* класс заголовка ячейки */
-.table_heading {
+
+.table__heading {
   margin: 0;
   line-height: 1.15;
   font-size: 24px;
@@ -171,7 +169,8 @@ margin: 100px auto;
 }
 
 /* класс текста ячейки */
-.table_text {
+
+.table__text {
   margin: 0;
   margin-top: 20px;
   line-height: 1.2;
@@ -184,7 +183,7 @@ margin: 100px auto;
   display: flex;
   position: relative;
   flex-direction: column;
-  margin-top: 100px;
+  padding-top: 100px;
   min-height: 790px;
   background-image: url('../images/feynman.png');
   background-repeat: no-repeat;
@@ -194,7 +193,7 @@ margin: 100px auto;
 
 .feynman__title {
   margin: 0 auto 70px;
-  width: 648px;
+  max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
@@ -222,33 +221,40 @@ margin: 100px auto;
 
 .kaufman {
   padding: 90px 0 90px;
-  background-color: black;
-  background-image: url('../images/kaufman-triangle.svg');
-  background-position: top right -210px;
-  background-repeat: no-repeat;
-  background-size: 877px 877px;
+  background-color: #1f1f1f;
   overflow: hidden;
+  position: relative;
 }
 
-.kaufman .table_cell {
-  width: 200px;
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  background-image: url('../images/kaufman-triangle.svg');
+  /* background-position: top right -210px; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 877px;
+  height: 877px;
+}
+
+.section-title_theme_dark {
+  color: white;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 1;
+}
+
+.table__cell_theme_dark {
+  max-width: 200px;
   margin-top: 80px;
+  z-index: 1;
 }
 
-/* вместо классов с модификатором theme_dsrk изменила цвет шрифта на белый таким образом: */
-.kaufman .section-title {
-  color: white;
-}
-
-.kaufman .section-subtitle {
-  color: white;
-}
-
-.kaufman .table_heading {
-  color: white;
-}
-
-.kaufman .table_text {
+.table_theme_dark {
   color: white;
 }
 
@@ -256,18 +262,22 @@ margin: 100px auto;
   margin: auto;
   min-height: 350px;
   padding: 60px 0 40px;
-  background-color: black;
+  background-color: #1f1f1f;
   box-sizing: border-box;
 }
 
 /* таблица подвала (главная) */
+
 .footer__columns {
-  margin: auto;
-  height: 250px;
+  margin: 0 auto;
   display: flex;
   position: relative;
   width: 90%;
   justify-content: space-between;
+}
+
+.footer__column {
+  min-height: 250px;
 }
 
 .footer__column_content_copyright {
@@ -277,10 +287,10 @@ margin: 100px auto;
   flex-basis: 711px;
 }
 
-/* дополнительный класс для логотипа в футере,
-используется вместе с универсальным классом logo  */
-.logo__place_footer {
-  height: 35px;
+/* используется вместе с универсальным классом logo  */
+
+.logo_place-footer {
+  max-height: 35px;
 }
 
 .footer__author {
