--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -4,9 +4,10 @@
   font-size: 30px;
   font-weight: normal;
   color: #2f80ed;
+  text-decoration: none;
+  transition: opacity 1s linear;
 }
 
 .khan__buy-link:hover {
   opacity: 0.5;
-  transition: opacity 1s linear;
 }
